# CANDY

./: .gitignore  .gitmodules  CANDY.cbp  CMakeLists.txt  Makefile  README.md  detect_cuda_arch.py  setup.py
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: cmake.yml  cmk.yml
PyCANDYFrameWork.egg-info/: PKG-INFO  SOURCES.txt
PyCANDYFramework.egg-info/: PKG-INFO  SOURCES.txt
apps/: CMakeLists.txt  README.md
apps/BenchmarkTool/: CMakeLists.txt  README.md  benchmark_config.cpp  benchmark_config.hpp  benchmark_tool.cpp  scenarios.cpp  scenarios.hpp
apps/BenchmarkTool/datasets/: README.md  download.py  download_hdf5.py  download_tar_gz.py
apps/BenchmarkTool/scenarios_config/: concurrent_hnsw.toml  hnsw.ini  hnsw.toml
apps/CPlusPlus/: CMakeLists.txt  Main.cpp  MultiRW.cpp
apps/CPlusPlus/datasets/: download.py  download_coco.py  download_tar_gz.py
apps/DBClient/: CMakeLists.txt  db_client.cpp
apps/OptimizerTool/: CMakeLists.txt  ml_optimizer_tool.cpp
apps/Python/: README.md  interactive_rag.py  rag_llm.py  (+1 more)
apps/QueryTool/: CMakeLists.txt  query_tool.cpp
cmake/: AddTests.cmake  CompilerSetup.cmake  DefaultOptions.cmake  EnableLog4cxx.cmake  EnableTests.cmake  FindCuda.cmake  FindLog4cxx.cmake  FindTorch.cmake  LoggingSetup.cmake  SetCXXStandard.cmake  default.cmake  format.cmake  macros.cmake  third-party.cmake
config/: config.csv  configFvecs.csv  configHNSW.csv  configLSH.csv  configSONG.csv  default_config.txt  hnsw.ini
docker/: Dockerfile  DockeronWSL.sh  README.md  Setup.odp  docker-compose.yml  id_rsa.pub  start.sh
docs/: Design.md  Structure.ini  Structure.md
examples/Streaming/: CMakeLists.txt  main.cpp
installation/: Dockerfile  README.md  candy_build.sh  docker-compose.yml  install_candy_native_wsl.sh  install_pycandy.sh
python_bindings/: py_vector_db.py
python_bindings/pybind11_bindings/: CMakeLists.txt  algos_pybind.cpp  vectordb_pybind.cpp
scripts/: run-clang-format.sh
src/: CMakeLists.txt
src/API/: CMakeLists.txt  StreamAPI.cpp  vectordb_stream.cpp
src/Algorithms/: ANNSAlgorithmBase.cpp  ANNSBase.cpp  AlgorithmTable.cpp  CMakeLists.txt  SeparateANNSBase.cpp  abstract_index.cpp  approximate_nn.cpp  clustering.cpp  hnsw.cpp  hybrid_search.cpp  kd_tree.cpp  knn_search.cpp  parallel_helpers.cpp  parallelhnsw.cpp
src/Algorithms/BasicKNN/: BasicKNN.cpp  CMakeLists.txt
src/Algorithms/FlatGPUIndex/: CMakeLists.txt  FlatGPUIndex.cpp  disk_mem_buffer.cpp
src/Algorithms/HNSW/: CMakeLists.txt  HNSW.cpp  HNSWBase.cpp  hnsw.cpp
src/Algorithms/KDTree/: CMakeLists.txt  KDTree.cpp
src/Algorithms/KNN/: CMakeLists.txt  KNNSearch.cpp  SeparateKNNSearch.cpp
src/Algorithms/LSH/: CMakeLists.txt  LSHSearch.cpp
src/Algorithms/Manu/: BinLog.cpp  CMakeLists.txt  DataStore.cpp  ExecutorThread.cpp  HybridLogicalClock.cpp  IndexManager.cpp  InsertThread.cpp  QueryManager.cpp  SearchThread.cpp  StateManager.cpp  WriteAheadLog.cpp
src/Algorithms/Manu/Coordination/: DataCoordinator.cpp  IndexCoordinator.cpp  QueryCoordinator.cpp
src/Algorithms/Manu/Execution/: DataNode.cpp  IndexNode.cpp  QueryNode.cpp
src/Algorithms/Manu/Log/: Binlog.cpp  ControlMessage.cpp  HybridClock.cpp  Log.cpp  TimeTick.cpp  WAL.cpp
src/Algorithms/Manu/Storage/: DataStore.cpp  GrowingSegment.cpp  SealedSegment.cpp
src/Algorithms/SONG/: CMakeLists.txt  SONG.cu
src/Algorithms/Utils/: CMakeLists.txt
src/Algorithms/Vamana/: CMakeLists.txt  vamana.cpp  vamana_base.cpp
src/ComputeEngine/: BasicComputeEngine.cpp  CMakeLists.txt  compute_engine.cpp
src/Concurrency/: CMakeLists.txt  locks.cpp  thread_pool.cpp
src/Core/: CMakeLists.txt  VectorDatabase.cpp  partitioning.cpp  transaction.cpp  vector_db.cpp  versioning.cpp
src/DataLoader/: AbstractDataLoader.cpp  CMakeLists.txt  DataLoaderTable.cpp  FVECSDataLoader.cpp  RandomDataLoader.cpp
src/GPU/: CMakeLists.txt  gpu_kernels.cu  gpu_memory.cpp  gpu_scheduler.cpp
src/IO/: BasicStorage.cpp  CMakeLists.txt  backup_restore.cpp  data_loader.cpp  s3_storage.cpp  storage.cpp  wal.cpp
src/Optimization/: CMakeLists.txt  drl_optimization.cpp  ml_models.cpp  model_training.cpp
src/Parallelism/: CMakeLists.txt  locks.cpp  task_scheduler.cpp  thread_pool.cpp
src/Performance/: CMakeLists.txt  benchmark.cpp  gpu_benchmark.cpp  monitoring.cpp
src/PythonBinding/: CMakeLists.txt  py_vector_db.cpp
src/RAG/: CMakeLists.txt  agent_integration.cpp  embedding_api.cpp  retriever_api.cpp
src/StreamEngine/: CMakeLists.txt  data_stream.cpp  operators.cpp  stream_environment.cpp
src/Transaction/: CMakeLists.txt  deadlock_prevention.cpp
src/Utils/: CMakeLists.txt  Computation.cpp  ConfigMap.cpp  IntelliLog.cpp  IntelliTimeStampGenerator.cpp  Param.cpp  TensorOP.cpp  ThreadPool.cpp  UtilityFunction.cpp  computation.cpp  config.cpp  config_parser.cpp  error_handling.cpp  file_loader.cpp  logging.cpp  monitoring.cpp  thread_pool.cpp  timing.cpp
src/VectorDatabase/: CMakeLists.txt  storage_engine.cpp  vector_database.cpp
src/VectorDatabase/indexing/: CMakeLists.txt  anns.cpp
src/candy_core/: CMakeLists.txt  state_interface.cpp
src/candy_core/compute_engine/: compute_engine.cpp
src/candy_core/utils/: monitoring.cpp
src/candy_runtime/operators/: CMakeLists.txt  base_operators.cpp  log_operator.cpp
src/candy_streaming/: CMakeLists.txt  data_stream.cpp  stream_environment.cpp
src/candy_vector_db/: CMakeLists.txt  query_executor.cpp  storage_engine.cpp  vector_database.cpp
src/candy_vector_db/indexing/: anns.cpp
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
test/AlgorithmTests/: CMakeLists.txt  kdtree_tests.cpp
test/AlgorithmsTests/: CMakeLists.txt  HNSWTests.cpp  KdTreeTests.cpp  LSHTests.cpp
test/CoreTests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  TorchTests.cpp  cmake_install.cmake  core_tests.cpp  torch_tests.cpp
test/SystemTest/: SimpleTest.cpp
test/UnitTest/: CMakeLists.txt  test_compute_engine.cpp
test/UtilsTests/: CMakeLists.txt  config_parser_tests.cpp  file_loader_tests.cpp  thread_pool_tests.cpp
tools/: CMakeLists.txt  run_clang_format.cpp
(+215 files in other folders)
