add_subdirectory(Algorithms)
add_subdirectory(API)
add_subdirectory(Core)
add_subdirectory(DataLoader)
add_subdirectory(GPU)
add_subdirectory(IO)
add_subdirectory(Optimization)
add_subdirectory(Parallelism)
add_subdirectory(Performance)
add_subdirectory(Transaction)
add_subdirectory(Utils)
add_subdirectory(ComputeEngine)